fix(frontend): wyrownano layout home i poprawiono dzialanie globalnego kontenera

--- a/frontend/src/assets/tailwind.css
+++ b/frontend/src/assets/tailwind.css
@@ -102,10 +102,7 @@ html {
 
 @layer utilities {
     .gh-container {
-        max-width: 1200px;
-        margin-left: auto;
-        margin-right: auto;
-        padding-left: 1rem;
-        padding-right: 1rem;
+        @apply container;
+        margin: auto;
     }
 }
